# YuchenUI

./: .gitattributes  .gitignore  CMakeLists.txt  README.md  reset_git.sh  reset_stable.sh  重构.md
cmake/: Compiler.cmake  Dependencies.cmake  Image.cmake  Installation.cmake  Platform.cmake  Resources.cmake  Shaders.cmake  SourceScan.cmake  Testing.cmake  Text.cmake  Version.cmake  YuchenUIConfig.cmake.in  yuchen_version.h.in
cmake/scripts/: generate_resources.py
cmake/tools/resource_generator/: CMakeLists.txt  main.cpp
core/: CMakeLists.txt
core/include/YuchenUI/: YuchenUI.h
core/include/YuchenUI/core/: Assert.h  Config.h  IUIContent.h  Types.h  UIContext.h  Validation.h
core/include/YuchenUI/debugging/: debug.h
core/include/YuchenUI/focus/: FocusManager.h  FocusPolicy.h
core/include/YuchenUI/image/: ImageDecoder.h  TextureCache.h
core/include/YuchenUI/menu/: IMenuBackend.h  Menu.h  MenuItem.h  MenuManager.h
core/include/YuchenUI/platform/: ICoordinateMapper.h  ITextInputHandler.h
core/include/YuchenUI/rendering/: IGraphicsBackend.h  RenderList.h
core/include/YuchenUI/resource/: EmbeddedResourceProvider.h  IResourceProvider.h  IResourceResolver.h  ResourceData.h  ResourceManager.h
core/include/YuchenUI/text/: Font.h  FontDatabase.h  FontManager.h  GlyphCache.h  IFontProvider.h  TextRenderer.h  TextUtils.h
core/include/YuchenUI/theme/: IThemeProvider.h  Theme.h  ThemeManager.h
core/include/YuchenUI/utils/: Clipboard.h
core/include/YuchenUI/widgets/: Button.h  CheckBox.h  ComboBox.h  Frame.h  GroupBox.h  Image.h  Knob.h  LevelMeter.h  RadioButton.h  ScrollArea.h  SpinBox.h  TextBlock.h  TextInput.h  TextLabel.h  UIComponent.h  Widget.h  WidgetsType.h
core/include/YuchenUI/widgets_expand/: Fader.h  LevelMeter.h  NumberBackground.h
core/src/core/: IUIContent.cpp  UIContext.cpp
core/src/focus/: FocusManager.cpp
core/src/image/: Image.cpp  ImageDecoder.cpp  TextureCache.cpp
core/src/menu/: IMenuBackend.cpp  Menu.cpp  MenuItem.cpp  MenuManager.cpp
core/src/rendering/: RenderList.cpp
core/src/resource/: EmbeddedResourceProvider.cpp  ResourceManager.cpp
core/src/text/: Font.cpp  FontDatabase.cpp  FontManager.cpp  GlyphCache.cpp  TextRenderer.cpp  TextUtils.cpp
core/src/theme/: ProtoolsClassicStyle.cpp  ProtoolsDarkStyle.cpp  Theme.cpp  ThemeManager.cpp
core/src/widgets/: Button.cpp  CheckBox.cpp  ComboBox.cpp  Frame.cpp  GroupBox.cpp  Image.cpp  Knob.cpp  LevelMeter.cpp  RadioButton.cpp  ScrollArea.cpp  SpinBox.cpp  TextBlock.cpp  TextInput.cpp  TextLabel.cpp  UIComponent.cpp  Widget.cpp
core/src/widgets_expand/: Fader.cpp  LevelMeter.cpp  NumberBackground.cpp
desktop/: CMakeLists.txt
desktop/include/YuchenUI/: YuchenUI-Desktop.h
desktop/include/YuchenUI-Desktop/: Application.h
desktop/include/YuchenUI/platform/: PlatformBackend.h  WindowImpl.h
desktop/include/YuchenUI/windows/: BaseWindow.h  Window.h  WindowManager.h
desktop/src/YuchenUI-Desktop/: Application.cpp
desktop/src/platform/macos/: MacEventManager.h  MacEventManager.mm  MacMenuImpl.h  MacMenuImpl.mm  MacOSWindowImpl.mm  MetalRenderer.h  MetalRenderer.mm  PlatformBackend.mm  ShaderSources.h  WindowManager_macOS.mm
desktop/src/platform/windows/: D3D11Renderer.cpp  D3D11Renderer.h  PlatformBackend.cpp  Win32MenuImpl.cpp  Win32MenuImpl.h  Win32WindowImpl.cpp  WindowManager_Windows.cpp
desktop/src/utils/: Clipboard_Windows.cpp  Clipboard_macOS.mm
desktop/src/windows/: BaseWindow.cpp  WindowManager.cpp  WindowManagerPlatform.h
documents/: macOS PingFang Font Access Guide via System API.md
examples/: CMakeLists.txt
examples/DemoApplication/: CMakeLists.txt  Info.plist.in
examples/DemoApplication/src/: Application.cpp  Application.h  main.cpp
examples/DemoApplication/src/MixerPanel/: ChannelSection.cpp  ChannelSection.h  ChannelStrip.cpp  ChannelStrip.h  FaderMeterSection.cpp  FaderMeterSection.h  MixerWindow.cpp  MixerWindow.h  NameSection.cpp  NameSection.h
examples/MixerPanel/: CMakeLists.txt  Info.plist.in
examples/MixerPanel/src/: ChannelSection.cpp  ChannelSection.h  ChannelStrip.cpp  ChannelStrip.h  FaderMeterSection.cpp  FaderMeterSection.h  MeterNumberSection.cpp  MeterNumberSection.h  MixerApplication.cpp  MixerApplication.h  MixerWindow.cpp  MixerWindow.h  NameSection.cpp  PanSection.cpp  PanSection.h  SoloMuteSection.cpp  SoloMuteSection.h  TrackType.h  main.cpp
examples/MixerPanel/src/theme/: MixerClassicTheme.cpp  MixerClassicTheme.h  MixerDarkTheme.cpp  MixerDarkTheme.h  MixerTheme.cpp  MixerTheme.h
resources/shaders/: Basic.hlsl  Basic.metal  Image.hlsl  Image.metal  Shape.hlsl  Shape.metal  Text.hlsl  Text.metal
source/include/YuchenUI/: YuchenUI.h
source/include/YuchenUI/core/: Assert.h  Colors.h  Config.h  Types.h  Validation.h
source/include/YuchenUI/events/: Event.h  EventManager.h
source/include/YuchenUI/focus/: FocusManager.h
source/include/YuchenUI/image/: TextureCache.h
source/include/YuchenUI/menu/: Menu.h  MenuItem.h  MenuManager.h
source/include/YuchenUI/platform/: MenuImpl.h  PlatformBackend.h  WindowImpl.h
source/include/YuchenUI/rendering/: GraphicsContext.h  RenderList.h
source/include/YuchenUI/text/: Font.h  FontManager.h  GlyphCache.h  TextRenderer.h
source/include/YuchenUI/theme/: Theme.h
source/src/focus/: FocusManager.cpp
source/src/image/: Image.cpp  TextureCache.cpp
source/src/menu/: Menu.cpp  MenuItem.cpp  MenuManager.cpp
source/src/text/: Font.cpp  GlyphCache.cpp  TextRenderer.cpp  TextUtils.cpp
source/src/theme/: ProtoolsClassicStyle.cpp  ProtoolsDarkStyle.cpp  ThemeManager.cpp
source/src/utils/: Clipboard.cpp
source/src/widgets/: Button.cpp  CheckBox.cpp  ComboBox.cpp  Frame.cpp  GroupBox.cpp  RadioButton.cpp  ScrollArea.cpp  SpinBox.cpp  TextBlock.cpp  TextInput.cpp  TextLabel.cpp  UIComponent.cpp  Widget.cpp
source/src/windows/: BaseWindow.cpp  IWindowContent.cpp  WindowManager.cpp
test/: CMakeLists.txt
test/unit/: WindowLifecycleTest copy.cpp  WindowLifecycleTest.cpp  font_system_test.cpp  render_metal_test.mm  widget_levelmeter_test.cpp
(+37 files in other folders)
